k8s/authService/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE_NAME_LOWERCASE}-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /${SERVICE_NAME_LOWERCASE}
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME_LOWERCASE}
                port:
                  number: 80
